--- a/app/design/frontend/base/default/locale/pt_BR/translate.csv
+++ b/app/design/frontend/base/default/locale/pt_BR/translate.csv
@@ -1,9 +1,20 @@
 "####### Genérico","###########################################################"
 "Value","Valor"
+"Month","Mês"
+"Year","Ano"
 "####### Boleto","#############################################################"
 "Billet", "Boleto",
 "Tax/VAT", "CPF ou CNPJ",
 "####### Cartão de crédito","##################################################"
 "Credit Card", "Cartão de Crédito"
+"Select a Card", "Selecionar um cartão"
+"Fill Data", "Preencher Dados"
+"Card number", "Número do cartão"
+"Holder Name", "Nome do titular"
+"Expiration date", "Validade"
+"Installments", "Parcelamento"
+"Fill the card number","Preencha o número do cartão"
+"Save this card to future orders","Salvar este cartão para compras futuras"
+"Invalid Credit Card", "Cartão de crédito inválido"
 "####### Informações extras de checkout","#####################################"
 "Click <a href='%s'>here</a> to show your billet for <strong>%s %s</strong> payment.", "Clique <a href='%s'>aqui</a> para mostrar seu boleto para o pagamento de <strong>%s %s</strong>."
