:globe_with_meridians: javascript translaction structure set; basic translations added

--- a/app/design/frontend/base/default/locale/pt_BR/translate.csv
+++ b/app/design/frontend/base/default/locale/pt_BR/translate.csv
@@ -5,6 +5,7 @@
 "####### Boleto","#############################################################"
 "Billet", "Boleto",
 "Tax/VAT", "CPF ou CNPJ",
+"Invalid CPF","CPF inválido",
 "####### Cartão de crédito","##################################################"
 "Credit Card", "Cartão de Crédito"
 "Select a Card", "Selecionar um cartão"
