:fire: removing config icons

--- a/app/locale/pt_BR/mundipagg_adminhtml_locale.csv
+++ b/app/locale/pt_BR/mundipagg_adminhtml_locale.csv
@@ -6,7 +6,7 @@
 
 "##### Configuração básica do módulo","########################################"
 "Module Basic Configuration","Configuração básica do módulo"
-"<img title='Mundipagg' alt='Mundipagg' width='32' style='margin:10px 0px 0px 0px;' src='/skin/adminhtml/default/default/images/mundipagg/icons/mundipagg-branco.png'/> <div style='margin: -23px 0 13px 40px;'> General configuration</div>","<img title='Mundipagg' alt='Mundipagg' width='32' style='margin:10px 0px 0px 0px;' src='/skin/adminhtml/default/default/images/mundipagg/icons/mundipagg-branco.png'/> <div style='margin: -23px 0 13px 40px;'> Configuração Geral</div>"
+"General configuration","Configuração Geral"
 "Api data","Configuração da API"
 "Secret key [production]","Chave secreta [produção]"
 "Secret key [test]","Chave secreta [teste]"
@@ -37,13 +37,13 @@
 "Two credit cards configuration","Configurações de dois cartões"
 "<img title='Creditcard' alt='Creditcard' width='32' style='margin-top:9px;' src='/skin/adminhtml/default/default/images/mundipagg/icons/creditcard.png'/> <div style='margin:-29px 0 13px 40px'> General credit card configuration</div>'","<img title='Cartão de Crédito' alt='Cartão de Crédito' width='32' style='margin-top:9px;' src='/skin/adminhtml/default/default/images/mundipagg/icons/creditcard.png'/> <div style='margin:-29px 0 13px 40px'> Configuração geral de Cartão de Crédito</div>'"
 "##### Configurações de boleto e cartão de crédito","##########################"
-"<img title='Billet Creditcard' alt='Billet Creditcard' width='32' style='margin-top:9px;' src='/skin/adminhtml/default/default/images/mundipagg/icons/creditcard.png'/> <div style='margin:-29px 0 13px 40px'> Billet and Credit Card configuration</div>","<img title='Boleto e Cartão de Crédito' alt='Boleto e Cartão de Crédito' width='32' style='margin-top:9px;' src='/skin/adminhtml/default/default/images/mundipagg/icons/creditcard.png'/> <div style='margin:-29px 0 13px 40px'> Configuração de Boleto e Cartão de Crédito</div>"
+"Billet and Credit Card configuration","Configuração de Boleto e Cartão de Crédito"
 "General billet and credit card configuration","Configuração geral de boleto e cartão de crédito"
 "Billet configuration","Configuração de Boleto"
 "CreditCard configuration","Configuração de Cartão de Crédito"
 
 "##### Configurações de parcelas","############################################"
-"<img title='Installments' alt='Installments' width='37' style='margin: 9px 0 0 0px;' src='/skin/adminhtml/default/default/images/mundipagg/icons/installments.png'/><div style='margin: -26px 0 11px 45px;'>Installments configuration</div>","<img title='Parcelas' alt='Parcelas' width='37' style='margin: 9px 0 0 0px;' src='/skin/adminhtml/default/default/images/mundipagg/icons/installments.png'/><div style='margin: -26px 0 11px 45px;'>Configuração de parcelas</div>"
+"Installments configuration","Configuração de parcelas"
 "Default configuration - Applicable to all brands","Configuração padrão - Aplicável a todas as bandeiras"
 "Set it as default for all credit card brands","Marque como 'sim' para configurar para todas as bandeiras"
 "Max installments number","Número máximo de parcelas"
