:sparkles: Add i18n and change modman to include directory of translations in english

--- a/app/locale/en_US/mundipagg_adminhtml_locale.csv
+++ b/app/locale/en_US/mundipagg_adminhtml_locale.csv
@@ -1,3 +1,5 @@
 "##### Genérico","#############################################################"
-"Cobranças", "Charges"
-"Cobrança", "Charge"
+"Payment Method", "Payment Method"
+"Charge", "Charge"
+"Charges", "Charges"
+
