:construction: charges now are synchronously updated during manual capture/cancel

--- a/app/locale/pt_BR/mundipagg_adminhtml_locale.csv
+++ b/app/locale/pt_BR/mundipagg_adminhtml_locale.csv
@@ -7,6 +7,11 @@
 "Charge", "Cobrança"
 "Payment Method", "Método de Pagamento"
 "Amount", "Valor"
+"Capture","Capturar"
+"Cancel","Cancelar"
+"Captured Amount","Valor Capturado"
+"Canceled Amount","Valor Cancelado"
+
 
 "##### Configuração básica do módulo","########################################"
 "Module Basic Configuration","Configuração básica do módulo"
