:globe_with_meridians: i18n

--- a/app/locale/pt_BR/mundipagg_adminhtml_locale.csv
+++ b/app/locale/pt_BR/mundipagg_adminhtml_locale.csv
@@ -3,15 +3,26 @@
 "Payment title","Título do método de pagamento"
 "Yes","Sim"
 "No","Não"
+"Close","Fechar"
+
+"##### Charges","##############################################################"
 "Charges", "Cobranças"
 "Charge", "Cobrança"
+"Charge Id","Id da Cobrança"
 "Payment Method", "Método de Pagamento"
 "Amount", "Valor"
+"Value", "Valor"
 "Capture","Capturar"
 "Cancel","Cancelar"
 "Captured Amount","Valor Capturado"
 "Canceled Amount","Valor Cancelado"
-
+"Charge Information","Informações da cobrança"
+"How would you like to <strong><span class='charge-operation'></span></strong> this charge?","Como você gostaria de <strong><span class='charge-operation'></span></strong> esta cobrança?"
+"Total <span class='charge-operation'></span>","<span class='charge-operation'></span> totalmente"
+"Partial <span class='charge-operation'></span>","<span class='charge-operation'></span> parcialmente"
+"Value to <span class='charge-operation'></span>","Valor para <span class='charge-operation'></span>"
+"<span class='charge-operation'></span> Charge","<span class='charge-operation'></span> Cobrança"
+"To continue this operation, please enter your password","Para continuar esta operação, por favor confirme sua senha"
 
 "##### Configuração básica do módulo","########################################"
 "Module Basic Configuration","Configuração básica do módulo"
