:sparkles: module version now showed in config

--- a/app/locale/pt_BR/mundipagg_adminhtml_locale.csv
+++ b/app/locale/pt_BR/mundipagg_adminhtml_locale.csv
@@ -4,6 +4,7 @@
 "Yes","Sim"
 "No","Não"
 "Close","Fechar"
+"Version","Versão"
 
 "##### Charges","##############################################################"
 "Charges", "Cobranças"
