:sparkles: Show order total in onepage checkout.

--- a/app/locale/pt_BR/mundipagg_frontend_locale.csv
+++ b/app/locale/pt_BR/mundipagg_frontend_locale.csv
@@ -43,4 +43,5 @@
 "State", "Estado"
 "Country", "País"
 "Select an Country", "Selecione um País"
-"Select", "Selecione"
+"Select", "Selecione",
+"Subtotal", "Subtotal"
