:ok_hand: Fix translation.

--- a/app/locale/pt_BR/mundipagg_adminhtml_locale.csv
+++ b/app/locale/pt_BR/mundipagg_adminhtml_locale.csv
@@ -62,6 +62,8 @@
 "General billet and credit card configuration","Configuração geral de boleto e cartão de crédito"
 "Billet configuration","Configuração de Boleto"
 "CreditCard configuration","Configuração de Cartão de Crédito"
+"General voucher configuration","Configuração de Voucher"
+"Voucher brands configuration","Configuração de Bandeiras de Voucher"
 
 "##### Configurações de parcelas","############################################"
 "Installments configuration","Configuração de parcelas"
